[project]
name = "datapact-cmmc"
version = "0.1.0"
description = "CMMC Tracker — Cybersecurity Maturity Model Certification compliance platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmmc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[dependency-groups]
dev = [
    "respx>=0.22.0",
]
